--- a/PHPAccount/index.html
+++ b/PHPAccount/index.html
@@ -678,6 +678,26 @@
     </article>
   </main>
 
+   <!-- 
+   - #FOOTER
+ -->
+
+ <footer class="footer">
+
+  <p class="copyright body-medium"></p>
+
+  <a href="/" class="logo">
+    <img src="./assets/images/logo-light.svg" width="156" height="32" alt="E-cook" class="logo-light">
+
+    <img src="./assets/images/logo-dark.svg" width="156" height="32" alt="E-cook" class="logo-dark">
+  </a>
+
+  <a href="https://www.edamam.com/" target="_blank" class="edamam">
+    
+  </a>
+
+</footer>
+
 </body>
 
 </html>
