--- a/PHPAccount/index.html
+++ b/PHPAccount/index.html
@@ -131,7 +131,7 @@
             <input type="search" name="search" aria-label="Search recipes" placeholder="Search recipes..."
               class="search-field body-medium" data-search-field>
 
-            <button class="search-submit" aria-label="Submit" data-search-btn>
+            <button class="search-submit" aria-label="Submit" data-search-btns
               <span class="material-symbols-outlined" aria-hidden="true">search</span>
             </button>
 
