--- a/PHPAccount/index.html
+++ b/PHPAccount/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>E-cook - Cooking made easy.</title>
-  <meta name="title" content="Cook.io - Cooking made easy.">
+  <meta name="title" content="E-cook - Cooking made easy.">
   <meta name="description" content="This is a recipe application made by codewithsadee">
 
 
