--- a/PHPAccount/index.html
+++ b/PHPAccount/index.html
@@ -53,6 +53,8 @@
       </ul>
     </nav>
 
+    <button onclick="window.location.href='customPrzepisy.html'">Custom</button>
+    <button onclick="window.location.href='addNew.html'">Add new</button>
     <button class="icon-btn theme-switch has-state" aria-pressed="false" aria-label="Toggle light and dark theme"
       data-theme-btn>
       <span class="material-symbols-outlined light-icon" aria-hidden="true">light_mode</span>
