--- a/PHPAccount/detail.html
+++ b/PHPAccount/detail.html
@@ -67,7 +67,7 @@
             <ul class="navbar-list">
 
                 <li>
-                    <a href="/" class="navbar-link title-small has-state">Home</a>
+                    <a href="/PHPAccount/" class="navbar-link title-small has-state">Home</a>
                 </li>
 
                 <li>
@@ -212,7 +212,7 @@
             <img src="./assets/images/logo-dark.svg" width="156" height="32" alt="Cook.io" class="logo-dark">
         </a>
 
-       
+
 
     </footer>
 
