--- a/PHPAccount/index.html
+++ b/PHPAccount/index.html
@@ -50,11 +50,19 @@
           <a href="./recipes.html" class="navbar-link title-small has-state">Recipes</a>
         </li>
 
+        <li>
+          <a href="./customPrzepisy.html" class="navbar-link title-small has-state">Custom</a>
+        </li>
+
+        <li>
+          <a href="./addNew.html" class="navbar-link title-small has-state">Add new</a>
+        </li>
+
       </ul>
     </nav>
 
-    <button onclick="window.location.href='customPrzepisy.html'">Custom</button>
-    <button onclick="window.location.href='addNew.html'">Add new</button>
+    <!--<button onclick="window.location.href='customPrzepisy.html'">Custom</button>
+    <button onclick="window.location.href='addNew.html'">Add new</button>-->
     <button class="icon-btn theme-switch has-state" aria-pressed="false" aria-label="Toggle light and dark theme"
       data-theme-btn>
       <span class="material-symbols-outlined light-icon" aria-hidden="true">light_mode</span>
@@ -704,7 +712,7 @@
       <img src="./assets/images/logo-dark.svg" width="156" height="32" alt="E-cook" class="logo-dark">
     </a>
 
-   
+
 
   </footer>
 
