custom data base

--- a/PHPAccount/addNew.html
+++ b/PHPAccount/addNew.html
@@ -76,7 +76,7 @@
 
   <section class="recipe-form-section">
 
-    <form action="submit_recipe.php" method="post" class="recipe-form">
+    <form action="submit_recepe.php" method="post" class="recipe-form">
       <div class="form-group">
 
         <label for="recipeName">Recipe Name:</label>
