--- a/PHPAccount/index.html
+++ b/PHPAccount/index.html
@@ -58,6 +58,10 @@
           <a href="./addNew.html" class="navbar-link title-small has-state">Add new</a>
         </li>
 
+        <li>
+          <a href="./recipePage.php" class="navbar-link title-small has-state">My recipes</a>
+        </li>
+
       </ul>
     </nav>
 
