--- a/PHPAccount/index.html
+++ b/PHPAccount/index.html
@@ -51,15 +51,11 @@
         </li>
 
         <li>
-          <a href="./customPrzepisy.html" class="navbar-link title-small has-state">Custom</a>
+          <a href="./customPrzepisy.html" class="navbar-link title-small has-state">My recepies</a>
         </li>
 
         <li>
           <a href="./addNew.html" class="navbar-link title-small has-state">Add new</a>
-        </li>
-
-        <li>
-          <a href="./recipePage.php" class="navbar-link title-small has-state">My recipes</a>
         </li>
 
       </ul>
