--- a/PHPAccount/customPrzepisy.html
+++ b/PHPAccount/customPrzepisy.html
@@ -95,7 +95,7 @@
 </head>
 
 <body>
-  test
+  test2
   <header class="header" data-header>
     <a href="/" class="logo">
       <img src="./assets/images/logo-light.svg" width="156" height="32" alt="E-cook" class="logo-light">
