--- a/PHPAccount/saved-recipes.html
+++ b/PHPAccount/saved-recipes.html
@@ -2,170 +2,195 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- 
-    - primary meta tags
-  -->
-    <title>Saved recipes - Cook.io</title>
-    <meta name="title" content="All Recipes - Cook.io">
-    <meta name="description" content="This is a recipe application made by codewithsadee">
+  <title>Saved recipes - Cook.io</title>
+  <meta name="title" content="All Recipes - Cook.io">
+  <meta name="description" content="This is a recipe application made by codewithsadee">
+  <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
+  <script src="./assets/js/theme.js"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500&family=DM+Serif+Display&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0..1,0" />
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <script src="./assets/js/global.js" type="module"></script>
+  <script src="./assets/js/saved_recipes.js" type="module"></script>
+  <style>
+    .saved-recipe-page {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+      gap: 20px;
+      padding: 20px;
+    }
 
-    <!-- 
-    - favicon
-  -->
-    <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
+    .saved-recipe-page .data-item {
+      background-color: var(--item-background-color);
+      color: var(--item-text-color);
+      padding: 20px;
+      border-radius: 10px;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      transition: transform 0.3s ease;
+      position: relative;
+    }
 
-    <!-- 
-    - theme js
-  -->
-    <script src="./assets/js/theme.js"></script>
+    .saved-recipe-page .data-item:hover {
+      transform: translateY(-10px);
+    }
 
-    <!-- 
-    - google font
-  -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500&family=DM+Serif+Display&display=swap"
-        rel="stylesheet">
+    .saved-recipe-page .data-item img {
+      width: 200px;
+      height: 200px;
+      object-fit: cover;
+      border-radius: 10px;
+    }
 
-    <!-- 
-    - material icon
-  -->
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0..1,0" />
+    .saved-recipe-page .data-title {
+      margin-top: 10px;
+      font-size: 1.2em;
+      font-weight: bold;
+    }
 
-    <!-- 
-    - custom css
-  -->
-    <link rel="stylesheet" href="./assets/css/style.css">
+    .saved-recipe-page .data-time {
+      display: flex;
+      align-items: center;
+      margin-top: 5px;
+      font-size: 0.9em;
+    }
 
-    <!-- 
-    - custom js
-  -->
-    <script src="./assets/js/global.js" type="module"></script>
-    <script src="./assets/js/saved_recipes.js" type="module"></script>
+    .saved-recipe-page .data-time .material-symbols-outlined {
+      font-size: 1em;
+      margin-right: 5px;
+    }
 
+    .saved-recipe-page .add-to-favorites,
+    .saved-recipe-page .remove-from-favorites {
+      position: absolute;
+      bottom: 10px;
+      right: 10px;
+      background: none;
+      border: none;
+      cursor: pointer;
+      font-size: 1.5em;
+    }
+
+    .saved-recipe-page .add-to-favorites .material-symbols-outlined,
+    .saved-recipe-page .remove-from-favorites .material-symbols-outlined {
+      font-size: 1.5em;
+    }
+  </style>
 </head>
 
 <body>
-
-    <!-- 
-    - #HEADER
-  -->
-
-    <header class="header" data-header>
-
-        <a href="/" class="logo">
-            <img src="./assets/images/logo-light.svg" width="156" height="32" alt="Cook.io" class="logo-light">
-            <img src="./assets/images/logo-dark.svg" width="156" height="32" alt="Cook.io" class="logo-dark">
-        </a>
-
-        <nav class="navbar">
-            <ul class="navbar-list">
-
-                <li>
-                    <a href="./index.html" class="navbar-link title-small has-state">Home</a>
-                </li>
-
-                <li>
-                    <a href="./recipes.html" class="navbar-link title-small has-state">Recipes</a>
-                </li>
-
-            </ul>
-        </nav>
-
-        <button class="icon-btn theme-switch has-state" aria-pressed="false" aria-label="Toggle light and dark theme"
-            data-theme-btn>
-            <span class="material-symbols-outlined light-icon" aria-hidden="true">light_mode</span>
-
-            <span class="material-symbols-outlined dark-icon" aria-hidden="true">dark_mode</span>
-        </button>
-
-        <a href="./saved-recipes.html" class="btn btn-primary has-icon">
-            <span class="material-symbols-outlined" aria-hidden="true">book</span>
-
-            <span class="span">Saved Recipes</span>
-        </a>
-
-    </header>
-
-
-
-
-
-    <!-- 
-    - #MOBILE NAV
-  -->
-
-    <nav class="mobile-nav" aria-label="primary">
-        <ul class="nav-list">
-
-            <li class="nav-item">
-                <a href="./recipes.html" class="nav-link">
-                    <span class="item-icon">
-                        <span class="material-symbols-outlined" aria-hidden="true">lunch_dining</span>
-                    </span>
-
-                    <span class="label-medium">Recipes</span>
-                </a>
-            </li>
-
-            <li class="nav-item">
-                <a href="/" class="nav-link">
-                    <span class="item-icon">
-                        <span class="material-symbols-outlined" aria-hidden="true">home</span>
-                    </span>
-
-                    <span class="label-medium">Home</span>
-                </a>
-            </li>
-
-            <li class="nav-item">
-                <a href="./saved-recipes.html" class="nav-link" aria-current="true">
-                    <span class="item-icon">
-                        <span class="material-symbols-outlined" aria-hidden="true">book</span>
-                    </span>
-
-                    <span class="label-medium">Saved</span>
-                </a>
-            </li>
-
-        </ul>
+  <header class="header" data-header>
+    <a href="/" class="logo">
+      <img src="./assets/images/logo-light.svg" width="156" height="32" alt="Cook.io" class="logo-light">
+      <img src="./assets/images/logo-dark.svg" width="156" height="32" alt="Cook.io" class="logo-dark">
+    </a>
+    <nav class="navbar">
+      <ul class="navbar-list">
+        <li><a href="./index.html" class="navbar-link title-small has-state">Home</a></li>
+        <li><a href="./recipes.html" class="navbar-link title-small has-state">Recipes</a></li>
+      </ul>
     </nav>
+    <button class="icon-btn theme-switch has-state" aria-pressed="false" aria-label="Toggle light and dark theme" data-theme-btn>
+      <span class="material-symbols-outlined light-icon" aria-hidden="true">light_mode</span>
+      <span class="material-symbols-outlined dark-icon" aria-hidden="true">dark_mode</span>
+    </button>
+    <a href="./saved-recipes.html" class="btn btn-primary has-icon">
+      <span class="material-symbols-outlined" aria-hidden="true">book</span>
+      <span class="span">Saved Recipes</span>
+    </a>
+  </header>
 
-
-
-
-
-    <main>
-        <article class="article container saved-recipe-page" data-saved-recipe-container></article>
-    </main>
-
-
-
-
-
-    <!-- 
-    - #FOOTER
-  -->
-
-    <footer class="footer">
-
-     
-
-        <a href="/" class="logo">
-            <img src="./assets/images/logo-light.svg" width="156" height="32" alt="Cook.io" class="logo-light">
-
-            <img src="./assets/images/logo-dark.svg" width="156" height="32" alt="Cook.io" class="logo-dark">
+  <nav class="mobile-nav" aria-label="primary">
+    <ul class="nav-list">
+      <li class="nav-item">
+        <a href="./recipes.html" class="nav-link">
+          <span class="item-icon">
+            <span class="material-symbols-outlined" aria-hidden="true">lunch_dining</span>
+          </span>
+          <span class="label-medium">Recipes</span>
         </a>
+      </li>
+      <li class="nav-item">
+        <a href="/" class="nav-link">
+          <span class="item-icon">
+            <span class="material-symbols-outlined" aria-hidden="true">home</span>
+          </span>
+          <span class="label-medium">Home</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="./saved-recipes.html" class="nav-link" aria-current="true">
+          <span class="item-icon">
+            <span class="material-symbols-outlined" aria-hidden="true">book</span>
+          </span>
+          <span class="label-medium">Saved</span>
+        </a>
+      </li>
+    </ul>
+  </nav>
 
-    
+  <main>
+    <article class="article container saved-recipe-page" data-saved-recipe-container></article>
+  </main>
 
-    </footer>
+  <script>
+    document.addEventListener('DOMContentLoaded', function() {
+      fetch('get_favorites.php')
+        .then(response => response.json())
+        .then(data => {
+          const recipeContainer = document.querySelector('[data-saved-recipe-container]');
+          data.forEach(recipe => {
+            const dataItem = document.createElement('div');
+            dataItem.classList.add('data-item');
 
+            const recipeImage = document.createElement('img');
+            recipeImage.src = recipe.image_url;
+            recipeImage.alt = recipe.title;
+            dataItem.appendChild(recipeImage);
+
+            const titleElement = document.createElement('div');
+            titleElement.classList.add('data-title');
+            titleElement.textContent = recipe.title;
+            dataItem.appendChild(titleElement);
+
+            const timeElement = document.createElement('div');
+            timeElement.classList.add('data-time');
+            const clockIcon = document.createElement('span');
+            clockIcon.classList.add('material-symbols-outlined');
+            clockIcon.textContent = 'schedule';
+            timeElement.appendChild(clockIcon);
+            const timeText = document.createElement('span');
+            timeText.textContent = recipe.time + ' minutes';
+            timeElement.appendChild(timeText);
+            dataItem.appendChild(timeElement);
+
+            const favoriteButton = document.createElement('button');
+            favoriteButton.classList.add('add-to-favorites');
+            favoriteButton.innerHTML = '<span class="material-symbols-outlined">bookmark</span>';
+            dataItem.appendChild(favoriteButton);
+
+            recipeContainer.appendChild(dataItem);
+          });
+        })
+        .catch(error => console.error('Error fetching favorites:', error));
+    });
+  </script>
+
+  <footer class="footer">
+    <a href="/" class="logo">
+      <img src="./assets/images/logo-light.svg" width="156" height="32" alt="Cook.io" class="logo-light">
+      <img src="./assets/images/logo-dark.svg" width="156" height="32" alt="Cook.io" class="logo-dark">
+    </a>
+  </footer>
 </body>
 
 </html>
